@@ -5934,10 +5934,19 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|boolean
-name|error
+specifier|final
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|errors
 init|=
-literal|false
+operator|new
+name|ArrayList
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
 decl_stmt|;
 for|for
 control|(
@@ -5969,21 +5978,7 @@ init|(
 name|this
 init|)
 block|{
-name|f
-operator|=
-name|getFile
-argument_list|(
-name|bpid
-argument_list|,
-name|invalidBlks
-index|[
-name|i
-index|]
-operator|.
-name|getBlockId
-argument_list|()
-argument_list|)
-expr_stmt|;
+specifier|final
 name|ReplicaInfo
 name|info
 init|=
@@ -6006,9 +6001,10 @@ operator|==
 literal|null
 condition|)
 block|{
+comment|// It is okay if the block is not found -- it may be deleted earlier.
 name|LOG
 operator|.
-name|warn
+name|info
 argument_list|(
 literal|"Failed to delete replica "
 operator|+
@@ -6019,10 +6015,6 @@ index|]
 operator|+
 literal|": ReplicaInfo not found."
 argument_list|)
-expr_stmt|;
-name|error
-operator|=
-literal|true
 expr_stmt|;
 continue|continue;
 block|}
@@ -6042,9 +6034,9 @@ name|getGenerationStamp
 argument_list|()
 condition|)
 block|{
-name|LOG
+name|errors
 operator|.
-name|warn
+name|add
 argument_list|(
 literal|"Failed to delete replica "
 operator|+
@@ -6058,12 +6050,15 @@ operator|+
 name|info
 argument_list|)
 expr_stmt|;
-name|error
-operator|=
-literal|true
-expr_stmt|;
 continue|continue;
 block|}
+name|f
+operator|=
+name|info
+operator|.
+name|getBlockFile
+argument_list|()
+expr_stmt|;
 name|v
 operator|=
 operator|(
@@ -6081,9 +6076,9 @@ operator|==
 literal|null
 condition|)
 block|{
-name|LOG
+name|errors
 operator|.
-name|warn
+name|add
 argument_list|(
 literal|"Failed to delete replica "
 operator|+
@@ -6097,10 +6092,6 @@ operator|+
 name|v
 argument_list|)
 expr_stmt|;
-name|error
-operator|=
-literal|true
-expr_stmt|;
 continue|continue;
 block|}
 if|if
@@ -6110,9 +6101,9 @@ operator|==
 literal|null
 condition|)
 block|{
-name|LOG
+name|errors
 operator|.
-name|warn
+name|add
 argument_list|(
 literal|"Failed to delete replica "
 operator|+
@@ -6124,13 +6115,7 @@ operator|+
 literal|". No volume for this replica, file="
 operator|+
 name|f
-operator|+
-literal|"."
 argument_list|)
-expr_stmt|;
-name|error
-operator|=
-literal|true
 expr_stmt|;
 continue|continue;
 block|}
@@ -6149,9 +6134,9 @@ operator|==
 literal|null
 condition|)
 block|{
-name|LOG
+name|errors
 operator|.
-name|warn
+name|add
 argument_list|(
 literal|"Failed to delete replica "
 operator|+
@@ -6163,13 +6148,7 @@ operator|+
 literal|". Parent not found for file "
 operator|+
 name|f
-operator|+
-literal|"."
 argument_list|)
-expr_stmt|;
-name|error
-operator|=
-literal|true
 expr_stmt|;
 continue|continue;
 block|}
@@ -6304,14 +6283,101 @@ expr_stmt|;
 block|}
 if|if
 condition|(
-name|error
+operator|!
+name|errors
+operator|.
+name|isEmpty
+argument_list|()
 condition|)
 block|{
+name|StringBuilder
+name|b
+init|=
+operator|new
+name|StringBuilder
+argument_list|(
+literal|"Failed to delete "
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|errors
+operator|.
+name|size
+argument_list|()
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|" (out of "
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|invalidBlks
+operator|.
+name|length
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|") replica(s):"
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|errors
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|b
+operator|.
+name|append
+argument_list|(
+literal|"\n"
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|i
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|") "
+argument_list|)
+operator|.
+name|append
+argument_list|(
+name|errors
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 throw|throw
 operator|new
 name|IOException
 argument_list|(
-literal|"Error in deleting blocks."
+name|b
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 throw|;
 block|}
